--- a/data/shieldtm.conf
+++ b/data/shieldtm.conf
@@ -1,1 +1,10 @@
+description "Telegram-bot upstart script"
 
+respawn
+respawn limit 15 5
+
+start on runlevel [2345]
+stop on shutdown
+
+setuid root
+exec/bin/sh/home/shield/launch.sh
